--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -687,17 +687,17 @@ service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
     user root
     oneshot
 
-service qcamerasvr /system/bin/mm-qcamera-daemon
-    class late_start
-    user camera
-    group media system inet input graphics
-
 service ppd /system/bin/mm-pp-daemon
     class late_start
-    disabled
     user system
     socket pps stream 0660 system system graphics
     group system graphics
+    disabled
+
+service qcamerasvr /system/bin/mm-qcamera-daemon
+    class late_start
+    user camera
+    group camera system inet input
 
 service sensors /system/bin/sensors.qcom
     class main
