--- a/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
+++ b/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
@@ -58,8 +58,6 @@ InfraUapsdBeSrvIntv=0
 
 InfraUapsdBkSrvIntv=0
 
-# Flag to allow STA send AddTspec even when ACM is Off
-gAddTSWhenACMIsOff=1
 
 # Make 1x1 the default antenna configuration
 
@@ -149,7 +147,7 @@ g11dSupportEnabled=1
 # CCX Support and fast transition
 CcxEnabled=0
 FastTransitionEnabled=1
-ImplicitQosIsEnabled=0
+ImplicitQosIsEnabled=1
 gNeighborScanTimerPeriod=200
 
 gNeighborLookupThreshold=78
@@ -286,14 +284,30 @@ gChannelBondingMode5GHz=1
 
 gStaKeepAlivePeriod=30
 
-#AP LINK MONITOR TIMEOUT is used for both SAP and GO mode.
-#It is used to change the frequency of keep alive packets in the AP Link Monitor period which is by
-#default 20s. Currently the keep alive packets are sent as an interval of 3s but after this change
-#the keep alive packet frequency can be changed.
 
-#gApLinkMonitorPeriod = 3
+#Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
+#For every 10 seconds DUT sends Qos Null frame(i.e., Keep Alive frame if link is idle for last 10 seconds.)
+#For both active and power save clients.
 
+#Power save clients: DUT set TIM bit from 10th second onwards and till client honors TIM bit.
+#If doesn't honor for 5 seconds then Driver remove client.
 
+#Active clients: DUT send Qos Null frame for 10th seconds onwards if it is not success still DUT try on
+#11th second if not tries on 12th and so on till 15th second. Hence before disconnection DUT will send 5 NULL frames.
+#Hence in any case DUT will detect client got removed in (10+5) seconds. i.e., (gGoKeepAlivePeriod +gGoLinkMonitorPeriod)..
+
+#gGoLinkMonitorPeriod/ gApLinkMonitorPeriod is period where link is idle and it is period
+#where we send NULL frame.
+
+#gApLinkMonitorPeriod = 10
+
+#gGoLinkMonitorPeriod = 10
+
+#gGoKeepAlivePeriod/gApKeepAlivePeriod is time to spend to check whether frame are succeed to send or not.
+#Hence total effective detection time is gGoLinkMonitorPeriod+ gGoKeepAlivePeriod/gApLinkMonitorPeriod+ gApKeepAlivePeriod.
+#gGoKeepAlivePeriod = 5
+
+#gApKeepAlivePeriod = 5
 #If set will start with active scan after driver load, otherwise will start with
 
 #passive scan to find out the domain
@@ -335,9 +349,6 @@ gTxBFEnable=1
 #gTxLdpcEnable = 1 for HT mode, 2 for VHT mode,3 for both HT and VHT
 gTxLdpcEnable=3
 
-# Oxygen network (prop IE for IBSS)
-gEnableOxygenNwk=0
-
 #FlexConnect Power Factor
 #Default is set to 0 (disable)
 gFlexConnectPowerFactor=0
@@ -355,3 +366,4 @@ gRrmRandIntvl=100
 END
 
 # Note: Configuration parser would not read anything past the END marker
+
