rhine: fix bt and wifi mac address
Change-Id: Ibb6eff8e125d2969427a1d39341216e271ab6203

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -88,7 +88,7 @@ on fs
     chmod 0755 /data/etc
     start tad
     exec /sbin/wait4tad_static
-    exec /system/bin/taimport property
+    exec /system/bin/taimport
 
     restorecon -R /data/etc
 
