--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -20,7 +20,7 @@ import init.sony.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
-    symlink /data/tombstones /tombstones
+    chown system system /sys/kernel/debug/kgsl/proc
 
 on init
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -268,14 +268,8 @@ on post-fs-data
     mkdir /data/misc/wifi/prima 0775 wifi wifi
     exec /system/bin/mac-update
 
-    mkdir /data/credmgr 0700 system system
     mkdir /data/tombstones 0755 system system
-    mkdir /tombstones/modem 0755 system system
-    mkdir /tombstones/lpass 0755 system system
-    mkdir /tombstones/wcnss 055 system system
-    mkdir /tombstones/dsps 0755 system system
-    mkdir /tombstones/mdm 0755 system system
-    mkdir /tombstones/vendor 0755 system system
+    mkdir /data/tombstones/vendor 0755 system system
     mkdir /data/pc 0700 radio radio
     mkdir /data/persist 0770 system system
 
@@ -621,21 +615,9 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk
     class late_start
     disabled
 
-service thermald /system/bin/thermald -c /system/etc/thermald.conf
-    class main
-    socket thermald stream 0666 root root
-    user root
-    disabled
-
-#service thermal-engine /system/bin/thermal-engine -c /system/etc/thermal-engine.conf
-#    class main
-#    user root
-#    group root
-#    disabled
-
 service mpdecision /system/bin/mpdecision --avg_comp
-    user root
     class main
+    user root
 
 # bugreport is triggered by holding down volume down, volume up and power
 service bugreport /system/bin/dumpstate -d -p -B \
@@ -653,7 +635,7 @@ service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     oneshot
 
 service illumination /system/bin/illumination_service
-    socket illumination stream 0660 root system
+    socket illumination stream 0660 system camera
     class main
     user root
 
@@ -682,7 +664,7 @@ service rmt_storage /system/bin/rmt_storage
     class core
     user root
 
-service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
+service irsc_util /system/bin/irsc_util "/etc/sec_config"
     class main
     user root
     oneshot
@@ -690,8 +672,8 @@ service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
 service ppd /system/bin/mm-pp-daemon
     class late_start
     user system
-    socket pps stream 0660 system system graphics
-    group system graphics
+    socket pps stream 0660 system system
+    group system graphics qcom_diag
     disabled
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
@@ -705,11 +687,6 @@ service sensors /system/bin/sensors.qcom
     group root
     disabled
 
-service audiod /system/bin/audiod
-    class late_start
-    user system
-    group system
-
 service wcnss-service /system/bin/wcnss_service
     class late_start
     user system
@@ -720,7 +697,7 @@ service wcnss-service /system/bin/wcnss_service
 service time_daemon /system/bin/time_daemon
     class late_start
     user root
-    group root
+    group root radio qcom_diag
 
 service ptt_socket_app /system/bin/ptt_socket_app
     class main
